# mmpack

./: .gitignore  .gitmodules  LICENSE  README.md  mmpack.h
.github/workflows/: cmake.yml
cmake/: CMakeLists.txt  mmpack_unittest.cmake
src/: config.h  config.hpp  mmpack.h  mmpack.hpp  sgemm.h
src/gemm/: sgemm.cc
src/utils/: allocator.cpp  allocator.h  allocator.hpp  macro.hpp  tensor.h
test/: test_allocator.cc  test_allocator.cpp  test_sgemm.cc  test_tensor.cc  test_utils.h  test_vector.cc  test_vector.cpp
tools/ci_build/: build.py
